re PR c/60351 (Incorrect column number for warning on "right shift count is negative")

PR c/60351
	* c-typeck.c (build_binary_op): Use location when warning about
	shift count.

	* gcc.dg/pr60351.c: New test.

From-SVN: r209925